Update download api. Dataset owner can download own dataset without api key